--- a/src/peakrdl_python/templates/addrmap_field.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_field.py.jinja
@@ -37,7 +37,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
     __enum_cls = {{enumcls_name}}
         {% endif %}
 
-    __slots__ : List[str] = []
+    __slots__ : list[str] = []
 
     {%- if 'encode' in node.list_properties() %}
     @property
