--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -32,7 +32,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
     {{get_table_block(node) | indent}}
     """
 
-    __slots__ : List[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
+    __slots__ : list[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
 
     def __init__(self,
                  address: int,
@@ -114,7 +114,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
     {%- endfor %}
 
     @property
-    def systemrdl_python_child_name_map(self) -> Dict[str, str]:
+    def systemrdl_python_child_name_map(self) -> dict[str, str]:
         """
         In some cases systemRDL names need to be converted make them python safe, this dictionary
         is used to map the original systemRDL names to the names of the python attributes of this
@@ -149,7 +149,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}A
     """
     Class to represent a register array in the register model
     """
-    __slots__: List[str] = []
+    __slots__: list[str] = []
 
     @property
     def _element_datatype(self) -> Type[Node]:
