--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -86,6 +86,7 @@ from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import 
 {% from 'reg_definitions.py.jinja' import register_class_attributes with context %}
 {% from 'reg_definitions.py.jinja' import child_register_getter with context %}
 {% from 'addrmap_udp_property.py.jinja' import udp_property with context %}
+{% from 'addrmap_universal_property.py.jinja' import universal_properties with context %}
 
 {%- macro regfile_or_addr_instance(node) %}
     {%- if not hide_node_func(node) %}
@@ -216,6 +217,8 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
 
     {{ udp_property(node) }}
 
+    {{ universal_properties(node) }}
+
     {{ child_register_getter(node) }}
 
         {% if asyncoutput %}
@@ -338,6 +341,8 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
             }
 
     {{ udp_property(node) }}
+
+    {{ universal_properties(node) }}
 
     {{ child_register_getter(node) }}
     {% if asyncoutput %}
