--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -17,6 +17,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #}
 
 {% from 'addrmap_udp_property.py.jinja' import udp_property with context %}
+{% from 'addrmap_universal_property.py.jinja' import universal_properties with context %}
 
 {%- macro register_class(node) %}
     {%- if node.has_sw_readable and node.has_sw_writable %}
@@ -156,4 +157,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}A
         return {{get_fully_qualified_type_name(node)}}_cls
 
     {%- endif %}
+
+    {{ universal_properties(node) }}
+
 {%- endmacro %}
