--- a/tests/testcases/reg_name_stress.rdl
+++ b/tests/testcases/reg_name_stress.rdl
@@ -10,20 +10,23 @@ field fieldtype {
 addrmap reg_name_stress {
 
     reg {name="hello";
-        fieldtype field_a;} reg_a;
+         fieldtype field_a;} reg_a;
     reg {name="a register called name";
-        fieldtype field_a;} name;
+         fieldtype field_a;} name;
     reg {name="A register name with an escaped double quote\"";
-        fieldtype field_a;} reg_b;
+         fieldtype field_a;} reg_b;
     reg {name="A register name with an \\ which may have strange effects";
-        fieldtype field_a;} reg_c;
+         fieldtype field_a;} reg_c;
     reg {name="A register name with an single ' character";
-        fieldtype field_a;} reg_d;
+         fieldtype field_a;} reg_d;
     reg {name="A register name with an single {{bad_name}} designed to mess the jinja templates";
-        fieldtype field_a;} reg_e;
+         fieldtype field_a;} reg_e;
     /* This test was removed pending the solution to #169
     reg {name="A register name \"\"\" this messes up the docstrings";
-        fieldtype field_a;} reg_f;
+         fieldtype field_a;} reg_f;
     */
+    reg {name="A registers with
+               some line breaks";
+         fieldtype field_a;} reg_g;
 
 };
