--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -139,6 +139,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
 
     {{ udp_property(node) }}
 
+    {{ universal_properties(node) }}
+
     {%- if node.is_array %}
         {%- if node.has_sw_readable and node.has_sw_writable %}
 class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}ReadWriteArray):
